--- a/book my show/index.html
+++ b/book my show/index.html
@@ -14,21 +14,26 @@
     <div class="main">
         <div class="aa">
             <div class="logo">
-                <img src="images/bookmyshow-logo-vector.png" alt="bookmyshow-logo-vector" width="140px" height="70px">
+                <img src="images/bookmyshow-logo-vector.png" alt="bookmyshow-logo-vector" width="180px" height="100px">
             </div>
+
             <div class="search">
-                <nav class="navbar">
-                    <form class="container-fluid">
-                        <div class="input-group">
-                            <span class="input-group-search"><i class="bi bi-search"></i></span>
-                            <input type="search" class="form-control"
-                                placeholder="Search for Movies, Events, Plays, Sports and Activities"
-                                aria-label="Search for Movies, Events, Plays, Sports and Activities"
-                                aria-describedby="basic-addon1">
-                        </div>
-                    </form>
-                </nav>
+                <form class="search-form">
+                    <div class="input-group">
+                        <span class="input-group-search">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-search" viewBox="0 0 16 16">
+                                <path
+                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                            </svg>
+                        </span>
+                        <input type="search" class="search-input w-100"
+                            placeholder="Search for Movies, Events, Plays, Sports and Activities"
+                            aria-label="Search for Movies, Events, Plays, Sports and Activities">
+                    </div>
+                </form>
             </div>
+
             <div class="drop">
                 <div class="dropdown">
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
@@ -114,42 +119,65 @@
         <h1>Recommended Movies</h1>
         <div class="mov">
             <div class="mov1">
-                <a href=""><img class="movie" src="images/mov1.avif" alt="mov1" height="460px"></a>
-                <a href=""><h4>A.R.M</h1></a>
-                <a href=""><p>Action/Adventure/Drama/Period</p></a>
+                <a href=""><img class="movie" src="images/mov1.avif" alt="mov1" height="520px"></a>
+                <a href="">
+                    <h4>A.R.M</h1>
+                </a>
+                <a href="">
+                    <p>Action/Adventure/Drama/Period</p>
+                </a>
             </div>
             <div class="mov2">
-                <a href=""><img class="movie" src="images/mov2.avif" alt="mov2" height="460px"></a>
-                <a href=""><h4>Kishkindha Kaandam</h1></a>
-                <a href=""><p>Mystery/Thriller</p></a>
+                <a href=""><img class="movie" src="images/mov2.avif" alt="mov2" height="520px"></a>
+                <a href="">
+                    <h4>Kishkindha Kaandam</h1>
+                </a>
+                <a href="">
+                    <p>Mystery/Thriller</p>
+                </a>
             </div>
             <div class="mov3">
-                <a href=""><img class="movie" src="images/mov3.avif" alt="mov3" height="460px"></a>
-                <a href=""><h4>Joker: Folie a Deux</h1></a>
-                <a href=""><p>Drama/Suspense/Thriller</p></a>
+                <a href=""><img class="movie" src="images/mov3.avif" alt="mov3" height="520px"></a>
+                <a href="">
+                    <h4>Joker: Folie a Deux</h1>
+                </a>
+                <a href="">
+                    <p>Drama/Suspense/Thriller</p>
+                </a>
             </div>
             <div class="mov4">
-                <a href=""><img class="movie" src="images/mov4.avif" alt="mov4" height="460px"></a>
-                <a href=""><h4>Kondal</h1></a>
-                <a href=""><p>ction/Crime/Drama</p>A</a>
+                <a href=""><img class="movie" src="images/mov4.avif" alt="mov4" height="520px"></a>
+                <a href="">
+                    <h4>Kondal</h1>
+                </a>
+                <a href="">
+                    <p>Action/Crime/Drama</p>
+                </a>
             </div>
             <div class="mov5">
-                <a href=""><img class="movie" src="images/mov5.avif" alt="mov5" height="460px"></a>
-                <a href=""><h4>Bad Boyz</h1></a>
-                <a href=""><p>Action/Comedy</p></a>
+                <a href=""><img class="movie" src="images/mov5.avif" alt="mov5" height="520px"></a>
+                <a href="">
+                    <h4>Bad Boyz</h1>
+                </a>
+                <a href="">
+                    <p>Action/Comedy</p>
+                </a>
             </div>
-            <div class="mov5">
-                <a href=""><img class="movie" src="images/mov-6.avif" alt="mov6" height="460px"></a>
-                <a href=""><h4>Tumbbad</h1></a>
-                <a href=""><p>Fantasy/Horror/Period</p></a>
-            </div>
+
         </div>
 
     </div>
     <div class="main3">
-        <img src="images/img1.avif" alt="img1">
+        <img src="images/img1.avif" alt="img1" width="1740px">
     </div>
-
+    <div class="main4">
+        <h1>The Best of Live Events</h1>
+        <img class="hh" src="images/img2.avif" alt="img2">
+        <img class="hh" src="images/img3.avif" alt="img3">
+        <img class="hh" src="images/img4.avif" alt="img4">
+        <img class="hh" src="images/img5.avif" alt="img5">
+        <img class="hh" src="images/img6.avif" alt="img6">
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
