--- a/book my show/index.html
+++ b/book my show/index.html
@@ -168,7 +168,7 @@
 
     </div>
     <div class="main3">
-        <img src="images/img1.avif" alt="img1" width="1740px">
+        <img src="images/img1.avif" alt="img1" width="1680px">
     </div>
     <div class="main4">
         <h1>The Best of Live Events</h1>
@@ -178,10 +178,138 @@
         <img class="hh" src="images/img5.avif" alt="img5">
         <img class="hh" src="images/img6.avif" alt="img6">
     </div>
+    <div class="main5">
+        <div class="jjj">
+            <img src="images/premiere.avif" alt="premiere" width="100%">
+            <h3>Premieres</h3>
+            <p>Brand new releases every Friday</p>
+        </div>
+        <div class="jj">
+            <div class="prem">
+                <div class="mov1">
+                    <a href=""><img class="movie" src="images/img7.avif" alt="img7" height="520px" width="320px"></a>
+                    <a href="">
+                        <h4>Gondola</h1>
+                    </a>
+                    <a href="">
+                        <p>Comedy,Drama,Romantic</p>
+                    </a>
+                </div>
+                <div class="mov2">
+                    <a href=""><img class="movie" src="images/img8.avif" alt="img8" height="520px" width="320px"></a>
+                    <a href="">
+                        <h4>Tuesday</h1>
+                    </a>
+                    <a href="">
+                        <p>Drama,Fantasy</p>
+                    </a>
+                </div>
+                <div class="mov3">
+                    <a href=""><img class="movie" src="images/img9.avif" alt="img9" height="520px" width="320px"></a>
+                    <a href="">
+                        <h4>Trap (2024)</h1>
+                    </a>
+                    <a href="">
+                        <p>Crime,Mystery,Thriller</p>
+                    </a>
+                </div>
+                <div class="mov4">
+                    <a href=""><img class="movie" src="images/img10.avif" alt="img10" height="520px" width="320px"></a>
+                    <a href="">
+                        <h4>Jolly LLB 2</h1>
+                    </a>
+                    <a href="">
+                        <p>Comedy/Drama</p>
+                    </a>
+                </div>
+                <div class="mov5">
+                    <a href=""><img class="movie" src="images/img11.avif" alt="img11" height="520px" width="320px"></a>
+                    <a href="">
+                        <h4>M.S. Dhoni: The Untold Story</h1>
+                    </a>
+                    <a href="">
+                        <p>Biography,Drama</p>
+                    </a>
+                </div>
+    
+            </div>
+        </div>
+    </div>
+    <div class="main6">
+        <h1>Your Music Studio</h1>
+        <div class="mus">
+            <div class="mov1">
+                <a href=""><img class="movie" src="images/img12.avif" alt="img12" height="520px"></a>
+                <a href="">
+                    <h4>Shillong Cherry Blossom Festival 2024</h1>
+                </a>
+                <a href="">
+                    <p>RBDSA Sports Complex: Shillong concerts</p>
+                </a>
+                <a href="">
+                    <p>Concerts</p>
+                </a>
+            </div>
+            <div class="mov2">
+                <a href=""><img class="movie" src="images/img13.avif" alt="img13" height="520px"></a>
+                <a href="">
+                    <h4>BRILLANTE PIANO FESTIVAL - Kochi Chapter</h1>
+                </a>
+                <a href="">
+                    <p>JT Performing Arts Centre: Kochi</p>
+                </a>
+                <a href="">
+                    <p>Concerts</p>
+                </a>
+            </div>
+            <div class="mov3">
+                <a href=""><img class="movie" src="images/img14.avif" alt="img14" height="520px"></a>
+                <a href="">
+                    <h4>Open Air Kochi</h1>
+                </a>
+                <a href="">
+                    <p>Crowne Plaza :Kochi</p>
+                </a>
+                <a href="">
+                    <p>Concerts</p>
+                </a>
+            </div>
+            <div class="mov4">
+                <a href=""><img class="movie" src="images/img15.avif" alt="img15" height="520px"></a>
+                <a href="">
+                    <h4>Bandland 2024</h1>
+                </a>
+                <a href="">
+                    <p>Nice Grounds, BIEC: Bengaluru</p>
+                </a>
+                <a href="">
+                    <p>Concerts</p>
+                </a>
+            </div>
+            <div class="mov5">
+                <a href=""><img class="movie" src="images/img16.avif" alt="img16" height="520px"></a>
+                <a href="">
+                    <h4>Lollapalooza India 2025</h1>
+                </a>
+                <a href="">
+                    <p>Mumbai</p>
+                </a>
+                <a href="">
+                    <p>Concerts</p>
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="main7">
+        <h2>Trending Searches Right Now</h2>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
